<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Counter</string>
    <string name="action_settings">Settings</string>
    <string name="add_counter">Add Counter</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_add_counter">AddCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_counter">EditCounter</string>
    <string name="incre">Increse</string>
    <string name="res">Reset</string>
    <string name="ren">Rename</string>
    <string name="del">Delete</string>
    <string name="sum">Sumarize</string>

</resources>
