<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditCounter" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/increse"
        android:layout_centerHorizontal="true"
        android:text="@string/del" />

    <Button
        android:id="@+id/reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete"
        android:layout_alignRight="@+id/delete"
        android:text="@string/res" />

    <Button
        android:id="@+id/increse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sumarize"
        android:layout_alignLeft="@+id/delete"
        android:text="@string/incre" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rename"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:textSize="26sp" />

    <Button
        android:id="@+id/sumarize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/increse"
        android:layout_alignParentBottom="true"
        android:text="@string/sum" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rename"
        android:layout_alignBottom="@+id/rename"
        android:layout_toLeftOf="@+id/rename"
        android:ems="10" />

    <Button
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/reset"
        android:layout_centerVertical="true"
        android:text="@string/ren" />

</RelativeLayout>
